feat: add chart with sample daily number of actions
adds a chart with sample daily number of actions

close #1

--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   "dependencies": {
     "@material-ui/core": "4.9.7",
     "@material-ui/icons": "4.9.1",
+    "@nivo/line": "0.62.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "i18next": "17.0.16",
     "lodash": "4.17.15",
+    "moment": "2.27.0",
+    "moment-range": "4.0.2",
     "prop-types": "15.7.2",
     "qs": "6.9.1",
     "react": "16.13.1",
+    "react-dates": "21.8.0",
     "react-dom": "16.13.1",
     "react-ga": "2.7.0",
     "react-i18next": "10.12.5",
+    "react-moment-proptypes": "1.7.0",
     "react-redux": "7.2.0",
     "react-scripts": "3.4.0",
     "react-select": "3.0.8",
