--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Graasp App",
-  "name": "Graasp App Starter",
+  "short_name": "Actions Viewer",
+  "name": "Actions Viewer",
   "icons": [
     {
       "src": "favicon.ico",
