--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "graasp-app-starter-react",
-  "version": "0.5.4",
+  "version": "0.1.2",
   "private": true,
   "author": "React EPFL",
   "contributors": [
     "Juan Carlos Farah",
-    "Hassan Abdul Ghaffar",
-    "Mashkour Abdel Aziz"
+    "Hassan Abdul Ghaffar"
   ],
   "homepage": ".",
   "license": "MIT",
@@ -82,7 +81,7 @@
     "prettier": "1.19.1",
     "pretty-quick": "1.11.1",
     "script-ext-html-webpack-plugin": "2.1.4",
-    "standard-version": "7.1.0",
+    "standard-version": "8.0.0",
     "terser-webpack-plugin": "2.3.5",
     "webpack-cli": "3.3.11"
   },
